# prep-app

./: .dockerignore  .env.example  .gitignore  .tool-versions  AGENTS.md  Brewfile  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  Procfile  Procfile.deployed  Procfile.staging  README.md  agent.py  app.py  chat_handoff.py  db.py  deploy.sh  dev_preview.py  docker-compose.yml  generator.py  grader.py  icons.py  migrate_languages.py  migrate_skeleton_comments.py  migrate_skeletons.py  notify.py  pyproject.toml  requirements.txt  temporal_client.py
.githooks/: pre-commit
config/: prod.env.example  staging.env.example
deploy/: prod.env  staging.env  vps.compose.yml
docker/: Dockerfile.agent  Dockerfile.prep  Procfile.docker
docs/: OFFLINE.md  architecture.md  oss-readiness.md  refactor-notes.md
launchd/: com.zamua.prep.plist.template
prep/: agent.py  app.py  auth.py  chat_handoff.py  db.py  dev_preview.py  icons.py  temporal_client.py
prep/agent/: __init__.py  anthropic_api.py  fake.py  openai_api.py  openai_compat.py  openrouter.py  port.py  routes.py  sdk_adapter.py  selector.py  status.py  token_store.py  usage.py
prep/api/: __init__.py  auth.py  entities.py  mcp.py  repo.py  routes.py
prep/auth/: __init__.py  identity.py  port.py  repo.py  routes.py  webhooks_clerk.py
prep/byok/: __init__.py  crypto.py  entities.py  repo.py
prep/decks/: anki.py  anki_export.py  archive.py  entities.py  io.py  repo.py  routes.py  service.py
prep/domain/: grading.py  srs.py
prep/infrastructure/: db.py
prep/notify/: __init__.py  _legacy_module.py  entities.py  push.py  quiet_hours.py  repo.py  routes.py  scheduler.py
prep/offline/: __init__.py  entities.py  repo.py  routes.py  service.py
prep/study/: entities.py  repo.py  routes.py  service.py
prep/trivia/: __init__.py  agent_client.py  entities.py  repo.py  routes.py  scheduler.py  service.py  session_state.py
prep/web/: durations.py  errors.py  index.py  legal.py  log_redaction.py  metrics.py  pwa.py  responses.py  templates.py
prep/workflows/: __init__.py  entities.py  repo.py  routes.py  scheduler.py  service.py
scripts/: build.sh  install-launchd.sh  promote.sh  run-prep.sh
static/: cm-bundle.js  style.css  sw.js
static/cm/: entry.js  package.json
static/css/: base.css  index.css  layout.css  legacy.css  reset.css  tokens.css
static/js/: app.js
static/mockups/: agent-A-accordion.html  agent-B-tabs.html  agent-C-compact-cards.html  popover-1-divider.html  popover-2-grouped.html  popover-3-icons.html
templates/: _transform_diff_card.html  base.html  deck.html  deck_edit_ai.html  deck_export.html  deck_import_anki.html  deck_import_csv.html  deck_import_prepdeck.html  deck_new.html  deck_new_chooser.html  deck_new_srs.html  deck_new_trivia.html  deck_split.html  diag.html  error.html  generation.html  grading.html  index.html  landing.html  notify_settings.html  offline.html  plan.html  privacy.html  question_edit.html  question_new.html  reauth.html  reorganize.html  result.html  self_grade.html  session.html  session_completed.html  session_stale.html  settings_account.html  settings_agent.html  settings_api.html  settings_editor.html  settings_srs.html  sign_out_interstitial.html  study.html  study_empty.html  (+1 more)
templates/macros/: copyable_code.html  deck_card.html  mastery.html  nav.html  question_form.html
templates/notify/: log.html
templates/partials/: deck_lists.html  deck_overflow_menu.html  grading_progress.html  notif_edit.html  pin_form.html  plan_progress.html  pwa_install_nudge.html  sheet_duration.html  transform_diff_card.html  transform_progress.html  trivia_generating_progress.html  (+1 more)
tests/: conftest.py  test_durations.py  test_notification_log.py  test_notify_scheduler_loop.py  test_notify_url_prefix.py  test_smoke.py  test_temporal_client_surface.py
ui-tools/: capture.py
worker-go/: Makefile  go.mod  go.sum  main.go
(+154 files in other folders)
