[project]
name = "prep"
version = "0.13.3"
description = "Self-hosted spaced-repetition flashcards. Describe what you want to learn; Claude turns it into a deck. Study, refine, repeat."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

# Runtime dependencies. We pin versions to keep contributor environments
# reproducible — bumps go through the staging-first / tag-based deploy
# convention like any other change. uv lock is the source of truth at
# install time; this list is what humans edit.
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "jinja2==3.1.4",
    "python-multipart==0.0.12",
    "temporalio==1.7.1",
    "mistune==3.0.2",
    "pywebpush==2.1.2",
]

[tool.uv]
# Don't auto-discover packages — this is an app, not a library, so there
# are no importable packages to ship. Otherwise uv treats every directory
# at the root as a candidate package and warns about the missing build
# config.
package = false
