[project]
name = "prep"
version = "0.14.2"
description = "Self-hosted spaced-repetition flashcards. Describe what you want to learn; Claude turns it into a deck. Study, refine, repeat."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

# Runtime dependencies. We pin versions to keep contributor environments
# reproducible — bumps go through the staging-first / tag-based deploy
# convention like any other change. uv lock is the source of truth at
# install time; this list is what humans edit.
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "jinja2==3.1.4",
    "python-multipart==0.0.12",
    "temporalio==1.7.1",
    "mistune==3.0.2",
    "pywebpush==2.1.2",
    # pydantic is already a transitive dep via fastapi, but we use it
    # directly for entities + value objects under prep/*/entities.py
    # and prep/domain/, so pin it explicitly.
    "pydantic==2.13.3",
]

[tool.uv]
# Don't auto-discover packages — this is an app, not a library, so there
# are no importable packages to ship. Otherwise uv treats every directory
# at the root as a candidate package and warns about the missing build
# config.
package = false

[dependency-groups]
# Dev-only tooling. Installed by `uv sync --group dev` (or `--all-groups`).
# Not pulled into the runtime image — the Dockerfile uses `uv sync`
# without --group dev.
dev = [
    "ruff==0.7.4",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "freezegun==1.5.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    # FastAPI's TestClient emits a DeprecationWarning about httpx's
    # deprecated kwarg. Suppress until upstream catches up.
    "ignore::DeprecationWarning:starlette.*",
]

[tool.ruff]
# Codebase house style: 4-space indent, conservative line length.
# Excludes generated artifacts that we don't lint or format.
line-length = 100
extend-exclude = [
    ".venv",
    "static/cm/node_modules",
    "worker-go",
    "ui-tools/.venv",
]

[tool.ruff.lint]
# Default ruleset is `E,F` (pycodestyle errors + pyflakes). We add `I`
# for import sorting and `B` for likely bugs. Skipping style rules
# (line-too-long etc.) — the formatter handles that.
select = ["E", "F", "I", "B"]
ignore = [
    "E501", # long lines: formatter handles, and we wrap by intent
    "E402", # late module-level imports: deliberate in app.py + db.py
    "B008", # function-call default args (FastAPI Depends() is the canonical pattern)
    "B904", # raise-from inside except: codebase translates to HTTP errors that embed `e` in the message
]

[tool.ruff.format]
# Match the codebase: 4-space indent, double quotes, trailing commas
# in multi-line collections.
quote-style = "double"
indent-style = "space"
